# ObstacleRepresentationGenerator

./: .clang-tidy  Bracelet.cpp  Bracelet.hpp  CMakeLists.txt  DaCb.txt  DodecahedronFunctions.cpp  DodecahedronFunctions.hpp  Notes.txt  dodec matching outer.txt  dodecahedron.txt  graphs_conn_d2_order3.txt  graphs_conn_d2_order4.txt  graphs_conn_d2_order5.txt  graphs_conn_d2_order6.txt  graphs_conn_d2_order7.txt  graphs_conn_d2_order8.txt  main.cpp
